# editor4sh

./: .gitignore  Makefile  Makefile.am  Makefile.tc  README.md  config.h  configure.ac  editor.cxx  editor.fl  editor.h  editor4sh.cxx  editor4sh.desktop  editor4sh.fl  editor4sh.h
